# base-python-project

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/actions/load-cached-docker-image/: action.yml
.github/workflows/: python-ci.yml  python-matrix-test.yml  python-test.yml
base_python_project/: __main__.py
tests/: test_main.py
