[tool.poetry]
name = "base-python-assignment"
version = "0.1.0"
description = ""
authors = ["Diogo Santos Martins <yogaxpto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ruff = "^0.5.1"
pytest = "^8.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
