[project]
name = "base-python-assignment"
version = "0.1.0"
description = ""
authors = ["Diogo Santos Martins <yogaxpto@gmail.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.5.7",
    "mypy>=1.11.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.5.7",
    "mypy>=1.11.1",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

