[project]
name = "base-python-assignment"
version = "0.1.0"
description = ""
authors = [{name="Diogo Santos Martins", email="yogaxpto@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.5.7",
    "mypy>=1.11.1",
    "pytest-cov>=6.1.1",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = [
  "*/tests/*"
]

[tool.coverage.report]
omit = [
  "*/tests/*"
]

[tool.mypy]
strict = true
show_error_codes = true
warn_unused_configs = true
pretty = true